--- a/Assignment_11_1/Assignment_11_1.ipynb
+++ b/Assignment_11_1/Assignment_11_1.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/andrespineda/CarPrices/blob/main/Assignment_11_1/Assignment_11_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "L3EbeFqZaqsF"
       },
       "source": [
@@ -53,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 121,
       "metadata": {
         "id": "A7NMCZBiaqsI"
       },
@@ -74,20 +64,19 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
         "# Modeling\n",
-        "from sklearn.linear_model import Ridge\n",
-        "from sklearn.ensemble import RandomForestRegressor\n",
-        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.linear_model import LinearRegression,Ridge, Lasso\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
-        "from sklearn.linear_model import Ridge, Lasso\n",
-        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "from sklearn.model_selection import KFold, cross_val_score\n",
+        "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.pipeline import make_pipeline\n",
         "\n",
+        "\n",
         "# Evaluation\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-        "from sklearn.model_selection import KFold, cross_val_score\n",
+        "\n",
         "\n",
         "# General\n",
         "import time\n",
@@ -2971,9 +2960,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To determine which of the above models is better, we need to consider several performance metrics: Train Score, Test Score, Train RMSE (Root Mean Squared Error), Test RMSE, Train MAE (Mean Absolute Error), Test MAE, Train R2 (R-squared), and Test R2. A better model would generally have higher Train and Test Scores, lower RMSE and MAE values, and higher R2 values, as these indicate a good fit to the data and good generalization to unseen data.\n",
+        " ### Evaluation of Model Scores\n",
+        " To determine the best model, we should look for the one with the highest Test Score and Test R2, and the lowest Test RMSE and Test MAE, as these metrics indicate the model's performance on unseen data (the test set).\n",
         "\n",
-        "The models have been evaluated using k-fold cross-validation, which is a robust method for assessing model performance. The models include Lasso, Linear Regression, and Ridge regression algorithms, each with four folds of cross-validation.\n",
+        " To determine which of the above models is better, we need to consider several performance metrics: Train Score, Test Score, Train RMSE (Root Mean Squared Error), Test RMSE, Train MAE (Mean Absolute Error), Test MAE, Train R2 (R-squared), and Test R2. The better model will generally have higher Train and Test Scores, lower RMSE and MAE values, and higher R2 values, as these indicate a good fit to the data and good generalization to unseen data.\n",
+        "\n",
+        "The models have been evaluated using k-fold cross-validation. The models include Lasso, Linear Regression, and Ridge regression algorithms, each with four folds of cross-validation.\n",
         "\n",
         "Considering the Test Scores and Test R2 as primary indicators of model performance on unseen data:\n",
         "\n",
@@ -2983,31 +2975,86 @@
         "\n",
         "- **Ridge Regression (Ridge_kfold)**: The Ridge models show slightly higher Test Scores and Test R2 values compared to Lasso and Linear Regression, with scores ranging from approximately 0.79 to 0.81.\n",
         "\n",
-        "Based on these metrics, the Ridge Regression models (Ridge_kfold) appear to perform slightly better than the Lasso and Linear Regression models. They have the highest Test Scores and Test R2 values, which suggests they are better at generalizing to unseen data. The consistency across the folds also indicates that the Ridge models are stable.\n",
+        "Based on these metrics, the Ridge Regression models (Ridge_kfold) perform slightly better than the Lasso and Linear Regression models. They have the highest Test Scores and Test R2 values, which suggests they are better at generalizing to unseen data. The consistency across the folds also indicates that the Ridge models are stable.\n",
         "\n",
-        "Although the differences in performance metrics between the models are relatively small, the Ridge models show a slight edge.\n",
-        "\n",
-        "Based on these results, the Ridge Regression models are the better choice for predicting car prices due to their slightly superior performance on the test data.\n",
-        "\n"
+        "Although the performance metrics between the models are relatively small, the Ridge models show a slight edge. The Ridge Regression models are the better choice for predicting car prices due to their slightly superior performance on the test data.\n"
       ],
       "metadata": {
-        "id": "aS3zUl5Y-EGa"
+        "id": "vSYHXZuo_sTK"
       }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "YncxCyYnyjcU"
-      },
       "source": [
-        " ### Evaluation of Model Scores\n",
-        " To determine the best model, we should look for the one with the highest Test Score and Test R2, and the lowest Test RMSE and Test MAE, as these metrics indicate the model's performance on unseen data (the test set).\n",
-        "#### Best Score - Random Forest\n",
-        "The RandomForestRegressor_baseline model has the highest Test Score (0.827537) and Test R2 (0.827537), indicating it explains a significant proportion of the variance in the dependent variable. It also has relatively low Test RMSE (1.798447) and Test MAE (0.469585) compared to the other models, suggesting it has a good balance between bias and variance and is not overfitting as much as the other models might be.\n",
-        "#### Worst Score - Lasso\n",
-        "In contrast, the Lasso_baseline and LinearRegression_baseline models have negative Test R2 values, which are significantly worse than the other models, indicating poor performance on the test set. The Lasso_baseline model also has a Test Score of approximately -3972, which is an indicator of a model that performs worse than a simple mean model.\n",
-        "#### Conclusion\n",
-        "Therefore, the RandomForestRegressor_baseline model is the best model to predict price among the ones listed, as it has the best generalization performance on the test set according to the provided metrics.\n"
+        "# Grid Search\n",
+        "We will now use a grid search to fine tune the hyperparameters on the Ridge Model"
+      ],
+      "metadata": {
+        "id": "LjFlvw8kCOtT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ridge=Ridge()\n",
+        "parameters={'alpha':[1,5,10,20,30,35,40,45,50,55,100]}\n",
+        "ridge_regressor=GridSearchCV(ridge,parameters,scoring='neg_mean_squared_error',cv=5)\n",
+        "ridge_regressor.fit(X_normalized,y)\n"
+      ],
+      "metadata": {
+        "id": "QV-PZ38JPzQV",
+        "outputId": "0ffe020d-4cb9-4194-b772-a17420f918bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GridSearchCV(cv=5, estimator=Ridge(),\n",
+              "             param_grid={'alpha': [1, 5, 10, 20, 30, 35, 40, 45, 50, 55, 100]},\n",
+              "             scoring='neg_mean_squared_error')"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5, estimator=Ridge(),\n",
+              "             param_grid={&#x27;alpha&#x27;: [1, 5, 10, 20, 30, 35, 40, 45, 50, 55, 100]},\n",
+              "             scoring=&#x27;neg_mean_squared_error&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=5, estimator=Ridge(),\n",
+              "             param_grid={&#x27;alpha&#x27;: [1, 5, 10, 20, 30, 35, 40, 45, 50, 55, 100]},\n",
+              "             scoring=&#x27;neg_mean_squared_error&#x27;)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: Ridge</label><div class=\"sk-toggleable__content\"><pre>Ridge()</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Ridge</label><div class=\"sk-toggleable__content\"><pre>Ridge()</pre></div></div></div></div></div></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ridge_regressor.best_params_)\n",
+        "print(ridge_regressor.best_score_)"
+      ],
+      "metadata": {
+        "id": "hMVbr_UDRMOS",
+        "outputId": "19a45ba1-3d4c-4fce-dff8-668f51e65dcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'alpha': 1}\n",
+            "-28850564.33280173\n"
+          ]
+        }
       ]
     },
     {
@@ -3667,8 +3714,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
